<resources>
    <!--导航栏-->
    <string name="app_name">速宝柜机</string>
    <string name="title_user_put">我要寄件</string>
    <string name="title_user_get">我要取件</string>
    <string name="app_back">&#160;返回</string>
    <string name="app_exit">&#160;退出</string>
    <string name="title_delivery">速宝快递员</string>
    <string name="app_exit_login">退出登录</string>

    <!--主页-->
    <string name="app_user">我是速宝用户</string>
    <string name="app_delivery">我是快递员</string>
    <string name="user_get_put">我要存件/取件</string>
    <string name="delivery_get_put">我要投件/揽件</string>

    <!--用户主页-->
    <string name="put_goods">我要寄件提供用户自主寄件功能，只有使\n用“速宝”App的用户才能使用该功能。</string>
    <string name="get_good">用户取件提供用户自主取件功能。终端通\n过扫描“速宝”APP取件二维码或是输入手\n机号和取件码，打开相应的快件柜取件。</string>

    <!--用户寄件扫描二维码操作方法提示-->
    <string name="td_code">请在扫描窗口扫描“速宝”APP的寄件二维码</string>
    <string name="td_code_1">在“速宝”APP中编辑好寄件信息并\n付款，生成寄件二维码</string>
    <string name="td_code_2">用“速宝”终端扫描APP中的寄件二\n维码</string>
    <string name="td_code_3">扫描完成后选择快件柜，并在快件上贴上打印的快递单，放入快件柜完成寄件</string>

    <!--寄件完成-->
    <string name="express_single">请把打印出的快递单贴到快件上\n将快件放入开启的快递柜中完成寄件</string>

    <!--选择尺寸柜-->
    <string name="put_size">请根据快件尺寸选择相应的快件柜</string>
    <string name="cabinet_large">大尺寸快件柜</string>
    <string name="cabinet_mediun">中尺寸快件柜</string>
    <string name="cabinet_small">小尺寸快件柜</string>
    <string name="wh_80_80">80cm * 80cm</string>
    <string name="wh_60_60">60cm * 60cm</string>
    <string name="wh_40_40">40cm * 40cm</string>

    <!--用户取件页面 2种取件方式-->
    <string name="get_good_scanCode">扫描取件二维码</string>
    <string name="get_good_useCode">取件码取件</string>
    <string name="get_good_2way">扫描“速宝”APP的取件二维码或是输入取件手机号\n和取件码，打开相应的快件柜取走快件。</string>

    <!--取件码取件-->
    <string name="input_get_good_detail">输入取件信息</string>
    <string name="input_tel_last4">手机号码后四位</string>
    <string name="input_code">输入取件码</string>
    <string name="getgood">取&#160;件</string>
    <!--扫描二维码扫描成功-->
    <string name="scanOk">扫描成功，请在开启的快件柜完成取件</string>

    <!--快递员主页-->
    <string name="delivery_get">我要取件</string>
    <string name="delivery_put">我要投件</string>

    <!--快递员登录-->
    <string name="scan_identity_code">请扫描您的身份二维码</string>
    <string name="login">登录</string>

    <!--快递员取件-->
    <string name="delivery_get_good">在打开的快件柜中取走快件</string>

    <!--快递员投件-->
    <string name="input_expressSingle">输入快件单号</string>
    <string name="UCanScanExpressSingle">可通过扫描快件单号完成填写</string>
    <string name="input_tel">输入收件人手机号</string>
    <string name="finish">完&#160;成</string>

    <!-- 提示用户登录 -->
    <string name="text_prompt_login">您还没有登录，请扫描您的身份二维码</string>
    <string name="text_error">错误</string>
    <string name="title_activity_manager">Manager</string>

    <!--toast出错提示-->
    <string name="input_Right_expressSingle">请输入正确的快件单号</string>
    <string name="input_Right_tel">请输入正确的手机号码</string>
    <string name="error_noReturn">服务器端无数据返回</string>
    <string name="error_last4Tel">请准确输入手机号码后4位</string>
    <string name="error_rightPackageNo">请准确输入取件码</string>
    <string name="error_Nogood">暂无可取件</string>
    <string name="error_NoSuitableSize">暂无该尺寸箱格空余，请选其他尺寸</string>
    <string name="error_OpenCabinet">打开箱格失败</string>
    <string name="error_System">系统错误</string>
    <string name="error_packStage">该包裹已经寄出</string>
    <string name="error_mexitUpdate">导航栏退出按钮更新失败</string>
    <string name="error_versionDown">下载新版本失败</string>


    <!--toast出错提示-->
    <string name="succ_operate">操作成功</string>



    <!--链接服务器出错-->
    <string name="server_link_fail">服务器请求出错</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_main">UserMainActivityActivity</string>
    <string name="title_activity_delivert_main">DelivertMainActivity</string>
    <string name="title_activity_user_put_good">UserPutGoodActivity</string>
    <string name="title_activity_user_put_size">UserPutSizeActivity</string>
    <string name="title_activity_user_put_end">UserPutEndActivity</string>
    <string name="title_activity_user_get_good">UserGetGoodActivity</string>
    <string name="title_activity_user_get_good_by_code_ok">UserGetGoodByCodeOkActivity</string>
    <string name="title_activity_delivery_put_good">DeliveryPutGoodActivity</string>
    <string name="title_activity_delivery_put_size">DeliveryPutSizeActivity</string>
    <string name="title_activity_delivery_get_good">DeliveryGetGoodActivity</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>
    <string name="title_activity_delivery_login">DeliveryLoginActivity</string>
    <string name="title_activity_user_get_good_by_code">UserGetGoodByCode</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_update_version">UpdateVersionActivity</string>





</resources>
