<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/textview_item_style"
        android:layout_height="?actionBarSize"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <LinearLayout
        style="@style/lly_outermost_style"
        android:padding="50dp">

        <LinearLayout
            style="@style/lly_size_style"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg_main_white"
            android:onClick="showUserMainActivity">

            <TextView
                style="@style/textview_item_style"
                android:drawableTop="@drawable/circle_user"
                android:text="@string/app_user"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                style="@style/textview_item_style"
                android:text="@string/user_get_put"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/lly_size_style"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg_main_white"
            android:clickable="true"
            android:onClick="showDeliveryMainActivity">

            <TextView
                style="@style/textview_item_style"
                android:drawableTop="@drawable/circle_delivery"
                android:text="@string/app_delivery"
                android:textColor="@color/darkgreen" />

            <TextView
                style="@style/textview_item_style"
                android:text="@string/delivery_get_put"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/inputArea"
        android:background="#00000000"
        android:textColor="#00000000" />

</LinearLayout>
