<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.test.DeliveryPutSizeActivity"
    android:background="@drawable/bg_main_grey">



    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_below="@id/toolbar"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_size"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@android:color/darker_gray"
        android:padding="10dp" />
    <LinearLayout
        android:layout_below="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/lly_large"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cabinet_large"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cabinet_large"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wh_80_80"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:paddingTop="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/lly_medium"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cabinet_medium"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cabinet_mediun"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wh_60_60"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/lly_small"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cabinet_small"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cabinet_small"
                android:textColor="@android:color/darker_gray"
                android:textSize="30dp"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wh_40_40"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
