<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.test.UserPutSizeActivity"
    android:background="@drawable/bg_main_grey">



    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar"/>
    <ProgressBar android:id="@+id/progress_horizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:visibility="invisible"/>
    <TextView
        android:layout_below="@id/progress_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:id="@+id/updateCabStatus"
        android:background="#00000000"
        android:textColor="#00000000" />

    <TextView
        android:layout_below="@id/updateCabStatus"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:textColor="@color/green_word"/>
    <LinearLayout
        android:layout_below="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            style="@style/lly_size_style"
            android:id="@+id/lly_large">

            <TextView
                android:drawableTop="@drawable/cabinet_large"
                style="@style/textview_item_style"
                android:text="@string/cabinet_large"
                android:textColor="@color/green_word"
                android:textSize="30sp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wh_80_80"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:drawableLeft="@drawable/cabinet_useable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="25"
                android:textSize="30sp"
                android:id="@+id/tv_large"/>

        </LinearLayout>

        <LinearLayout
            style="@style/lly_size_style"
            android:id="@+id/lly_medium">


            <TextView
                android:drawableTop="@drawable/cabinet_medium"
                style="@style/textview_item_style"
                android:text="@string/cabinet_mediun"
                android:textColor="@color/green_word"
                android:textSize="30sp"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wh_60_60"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"/>
            <TextView
                android:drawableLeft="@drawable/cabinet_useable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="25"
                android:textSize="30sp"
                android:id="@+id/tv_medium"/>

        </LinearLayout>

        <LinearLayout
            style="@style/lly_size_style"
            android:id="@+id/lly_small">

            <TextView
                android:drawableTop="@drawable/cabinet_small"
                style="@style/textview_item_style"
                android:text="@string/cabinet_small"
                android:textColor="@color/green_word"
                android:textSize="30sp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wh_40_40"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"/>
            <TextView
                android:drawableLeft="@drawable/cabinet_useable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="25"
                android:textSize="30sp"
                android:id="@+id/tv_small"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
