<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_grey"
    android:gravity="center"
    android:onClick="hideSoftKeyborad"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jinwang.subao.activity.user.UserGetGoodActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ProgressBar android:id="@+id/progress_horizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_weight="2.0"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:paddingTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/input_get_good_detail"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:id="@+id/last4_tel"
                android:layout_marginTop="50dp"
                android:background="@color/bgtv_hint_lightblue"
                android:hint="@string/input_tel_last4"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/tv_hint_lightblue"
                android:textColorHint="@color/tv_hint_lightblue"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:maxLength="4" />

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/bgtv_hint_lightblue"
                android:drawableLeft="@drawable/icon_message"
                android:drawablePadding="20dp"
                android:gravity="center|left"
                android:hint="@string/input_code"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/tv_hint_lightblue"
                android:textColorHint="@color/tv_hint_lightblue"
                android:singleLine="true"
                android:maxLength="6" />

            <Button
                android:id="@+id/get_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_bg_blue340_42"
                android:text="@string/getgood"
                android:textSize="25dp"
                android:clickable="true"
                android:onClick="checkCode"/>
        </LinearLayout>

        <GridView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/keyboard"
            android:layout_gravity="center_vertical"
            android:numColumns="3"
            android:layout_weight="2.0"
            android:background="#128ce4"
            android:listSelector="@drawable/key_board_selector"
            android:horizontalSpacing="1dp"
            android:verticalSpacing="1dp" />

    </LinearLayout>

</LinearLayout>